<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/currentStatusTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="I can accept failure, everyone fails at something. But I can't accept not trying. -Michael Jordan"
        android:textStyle="bold"
        android:padding="35dp"
        android:textColor="@color/colorCounterAccentDark"
        android:layout_gravity="center"
        android:textSize="22sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.activities.mainActivity.MainActivity">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccentDark"
            android:gravity="end"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="150dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:text="Sort by: "
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/sortSpinner"
                android:layout_width="165dp"
                android:layout_height="36dp"
                android:entries="@array/sort_options" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/definitionsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/item_definitions_adapter" />
    </LinearLayout>

</FrameLayout>
