<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="1dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:text="Nike is ♡ "/>

    <EditText
        android:id="@+id/actionBarEditText"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginLeft="7dp"
        android:paddingLeft="7dp"
        android:layout_weight="1"
        android:textSize="22sp"
        android:maxLines="1"
        android:inputType="textFilter"
        android:hint="@string/action_bar_edit_text_hint"/>

</LinearLayout>